// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Column /> component should render correctly 1`] = `
<div
  className="column"
>
  <div>
    Some content
  </div>
</div>
`;

exports[`<Column /> component should support isHalf prop 1`] = `
<div
  className="column is-half"
>
  <div>
    Some content
  </div>
</div>
`;

exports[`<Column /> component should support isOneThird prop 1`] = `
<div
  className="column is-one-third"
>
  <div>
    Some content
  </div>
</div>
`;
